* Add handler for clipboard exceptions * Refine the coordinates panel UI * Fix selection and hover bugs after jump to feature * Fix too many values after decimal point in the inspection panel * Fix attribute type code value propagation

--- a/erdblick_app/styles.scss
+++ b/erdblick_app/styles.scss
@@ -4,6 +4,22 @@ body {
     overflow: hidden;
     height: 100vh !important;
     width: 100vw !important;
+
+    .p-multiselect-header {
+        padding: 0.5em 0.75em;
+
+        .p-inputtext {
+            padding: 0.5em;
+        }
+    }
+
+    .p-multiselectitem {
+        font-size: 0.9em;
+
+        li {
+            padding: 0.5em 0.75em;
+        }
+    }
 }
 
 .mapviewer-renderlayer {
@@ -572,6 +588,10 @@ body {
 .p-progressbar {
     height: 1.5em;
     font-size: 0.9em;
+
+    .p-progressbar-value-animate {
+        transition: none !important;
+    }
 }
 
 .p-colorpicker {
@@ -611,32 +631,18 @@ body {
         .coordinates-entries {
             display: flex;
             flex-direction: row;
-            padding-bottom: 0.5em;
-            gap: 1em;
+            padding-bottom: 0;
+            gap: 0.5em;
             overflow-y: auto;
-            margin: 0 auto;
             max-width: calc(100vw - 25em);
             align-items: center;
 
-            .p-multiselect-label {
-                display: none;
+            & > .coordinates-entry:nth-child(1) {
+                margin-left: 0.5em;
             }
 
-            .p-multiselect-header {
-                padding: 0.5em 0.75em;
-            }
-
-            p-multiselectitem {
-                font-size: 0.9em;
-
-                li {
-                    padding: 0.5em 0.75em;
-                }
-            }
-
-            .p-multiselect-trigger {
-                width: 2.5em;
-                height: 2em;
+            &:last-child {
+                margin-right: 0.5em;
             }
         }
 
@@ -662,11 +668,31 @@ body {
         }
 
         .p-card-body {
-            padding: 0.5em 1em 0 1em;
+            padding: 0;
         }
 
         .p-card-content {
             padding: 0;
+            display: flex;
+            flex-direction: row;
+
+            p-multiselect {
+                margin-bottom: -0.2em;
+            }
+
+            .p-multiselect {
+                box-shadow: none;
+                border: none;
+            }
+
+            .p-multiselect-label {
+                display: none;
+            }
+
+            .p-multiselect-trigger {
+                width: 2.25em;
+                height: 2em;
+            }
         }
 
         .coordinates-entry {
